# LedgerFlow

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  GETTING_STARTED.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  CLI.md  DATA_LAYOUT.md  DEVELOPMENT.md  ROADMAP.md  SCHEMAS.md
ledgerflow/: __init__.py  ai_analysis.py  alert_delivery.py  alerts.py  auth.py  automation.py  backup.py  bootstrap.py  building.py  charts.py  cli.py  connectors.py  csv_import.py  dedup.py  documents.py  errors.py  exporting.py  extraction.py  hashing.py  ids.py  index_db.py  integration_bank_json.py  jsonl.py  layout.py  ledger.py  linking.py  manual.py  migrations.py  money.py  ops.py  parsing.py  reporting.py  review.py  server.py  sources.py  storage.py  timeutil.py  txutil.py
ledgerflow/web/static/: app.js  index.html  styles.css
samples/: manual_entries.json
samples/inbox/bank/: statement.csv
samples/inbox/bills/: invoice_city_power.txt
samples/inbox/receipts/: receipt_farmers_market.txt
scripts/: demo_onboarding.sh
tests/: test_ai_analysis.py  test_alert_delivery.py  test_alerts.py  test_api.py  test_automation.py  test_backup.py  test_cli_surface.py  test_connectors.py  test_csv_import.py  test_extraction.py  test_ids.py  test_index_migrations.py  test_integration_bank_json.py  test_manual.py  test_milestones.py  test_parsing.py  test_sources.py
