[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerflow"
version = "0.2.0"
description = "Local-first bills and receipts money tracker with CLI, API, and web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "LedgerFlow Contributors" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "pdfplumber",
  "pypdf",
  "pytesseract",
  "pillow",
  "openai",
]

[project.scripts]
ledgerflow = "ledgerflow.cli:main"

[tool.setuptools]
packages = ["ledgerflow"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
exclude = "^tests/"
